JAVA-3042: Support testing against Java17
Changes to allow 'mvn verify' to succeed with JDK17, note JDK8 must still be used in the build phase.

pom.xml: Add '--add-opens java.base/jdk.internal.util.random=ALL-UNNAMED'
as maven-surefire-plugin argLine to support deep reflection for mockito, only loaded for JDK17

Dependency updates:
- jacoco-maven-plugin -> 0.8.10, resolves "Error while instrumenting path/to/class" with JDK17
- maven-bundle-plugin -> 5.1.1, resolves java.util.ConcurrentModificationException [FELIX-6259] with JDK17
- blockhound-junit-platform -> 1.0.8.RELEASE, earlier version did not pick up -XX:+AllowRedefinitionToAddDeleteMethods properly

Jenkinsfile: Add matrix axis for JABBER_VERSION for each of JDK8, JDK11, JDK17